--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
           </li>
           <li class="dropdown"><a href="#"><span>TECH SCHOOL</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="#">TECHSCHOOL 2025</a></li>
-              <li><a href="#">TECHSCHOOL 2024</a></li>
-              <li><a href="#">TECHSCHOOL 2023</a></li>
-              <li><a href="#">TECHSCHOOL 2022</a></li>
+              <li><a href="https://grace.icmc.usp.br/techschool2026/index.html">TECHSCHOOL 2026</a></li>
+              <li><a href="https://grace.icmc.usp.br/techschool2025/index.html">TECHSCHOOL 2025</a></li>
+              <li><a href="https://grace.icmc.usp.br/techschool2024/index.html">TECHSCHOOL 2024</a></li>
+              <li><a href="https://grace.icmc.usp.br/techschool2023/index.html">TECHSCHOOL 2023</a></li>
+              <li><a href="https://grace.icmc.usp.br/techschool2022/index.html">TECHSCHOOL 2022</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>MATERIAIS</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -84,20 +85,21 @@
             <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Saiba Mais</a>
           </div>
         </div>
+         <div class="carousel-item">
+          <div class="carousel-container">
+            <h2 class="animate__animated animate__fadeInDown">TechSchool 2026: <span>Seu Futuro Começa Aqui!</span></h2>
+            <p class="animate__animated animate__fadeInUp">As inscrições para a próxima edição estão abertas. Seja um monitor e lidere a inovação, ou garanta sua vaga no curso e transforme sua paixão por tecnologia em realidade. Junte-se a nós!</p>
+            <a href="https://grace.icmc.usp.br/techschool2026/index.html" class="btn-get-started animate__animated animate__fadeInUp scrollto">Inscreva-se</a>
+          </div>
+        </div>
+
         <div class="carousel-item">
-          <div class="carousel-container">
-            <h2 class="animate__animated animate__fadeInDown">slide 2</h2>
-            <p class="animate__animated animate__fadeInUp">texto</p>
-            <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Saiba Mais</a>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="carousel-container">
-            <h2 class="animate__animated animate__fadeInDown">slide 3</h2>
-            <p class="animate__animated animate__fadeInUp">texto</p>
-            <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Saiba Mais</a>
-          </div>
-        </div>
+  <div class="carousel-container">
+    <h2 class="animate__animated animate__fadeInDown">Mais que um Grupo, <span>um Movimento.</span></h2>
+    <p class="animate__animated animate__fadeInUp">No GRACE, unimos educação e comunidade para transformar o futuro das ciências exatas, uma menina de cada vez.</p>
+    <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Conheça Nossa História</a>
+  </div>
+</div>
         <a class="carousel-control-prev" href="#hero-carousel" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon bi bi-chevron-left" aria-hidden="true"></span>
         </a>
@@ -122,20 +124,27 @@
     </section>
 
     <section id="about" class="about section">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Sobre</h2>
-        <p>QUEM SOMOS</p>
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Sobre</h2>
+    <p>QUEM SOMOS</p>
+  </div>
+  <div class="container">
+    <div class="row gy-4">
+
+      <div class="col-lg-6 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+        <p>O GRACE (GRupo de Alunas de Ciências Exatas) é um grupo dedicado ao desenvolvimento de atividades de extensão na área de tecnologia, com foco no público feminino da cidade de São Carlos, especialmente estudantes dos níveis primário, secundário e superior.
+        <br><br>
+        Inserido no Programa Nacional Meninas Digitais da SBC, o GRACE busca incentivar instituições a promoverem projetos que estimlem meninas do ensino fundamental e médio a se interessarem pela área de informática, contribuindo para a redução da desigualdade de gênero na tecnologia. </p>
+        <a href="#" class="read-more"><span>Saiba Mais</span><i class="bi bi-arrow-right"></i></a>
       </div>
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <p>O GRACE (GRupo de Alunas de Ciências Exatas) é um grupo dedicado ao desenvolvimento de atividades de extensão na área de tecnologia, com foco no público feminino da cidade de São Carlos, especialmente estudantes dos níveis primário, secundário e superior.
-              Inserido no Programa Nacional Meninas Digitais da SBC, o GRACE busca incentivar instituições a promoverem projetos que estimulem meninas do ensino fundamental e médio a se interessarem pela área de informática, contribuindo para a redução da desigualdade de gênero na tecnologia. </p>
-            <a href="#" class="read-more"><span>Saiba Mais</span><i class="bi bi-arrow-right"></i></a>
-          </div>
-        </div>
+
+      <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-up" data-aos-delay="100">
+        <img src="assets/img/grace/image.png" class="img-fluid rounded-4 mb-4" alt="Imagem do Projeto GRACE">
       </div>
-    </section>
+
+    </div>
+  </div>
+</section>
 
     <section id="portfolio" class="portfolio section">
       <div class="container section-title" data-aos="fade-up">
@@ -192,53 +201,151 @@
             }
           </script>
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Comentário 0</h3>
-                <h4>Aluna 0 &amp; Aluna</h4>
-                <div class="stars">
-                  <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
-                </div>
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>texto</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
-              </div>
+
+  <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/testimonials/NOME_DA_IMAGEM_1.jpg" class="testimonial-img" alt="">
+      <h3>Colaboradora</h3>
+      <h4>Lina &amp; Coordenadora</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>texto</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+  <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/testimonials/NOME_DA_IMAGEM_2.jpg" class="testimonial-img" alt="">
+      <h3>Colaboradora</h3>
+      <h4>Isadora Ferrão</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>texto</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+  <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/testimonials/NOME_DA_IMAGEM_3.jpg" class="testimonial-img" alt="">
+      <h3>Colaboradora</h3>
+      <h4>Milena</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>texto</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+  <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/testimonials/NOME_DA_IMAGEM_4.jpg" class="testimonial-img" alt="">
+      <h3>Colaboradora</h3>
+      <h4>Gabriela Marculino</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>texto</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+</div>
+    </section>
+
+   <section id="results" class="results section">
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Publicações</h2>
+    <p>Conheça algumas conquistas alcançadas através dos nossos Projetos</p>
+  </div>
+  <div class="container">
+    <div class="row gy-4">
+
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="publication-item">
+          <a href="https://www.instagram.com/p/DL6VD6SsrYI" target="_blank">
+            <img src="assets/img/instagram/post4.png" class="img-fluid" alt="Menção Honrosa">
+            <div class="publication-info">
+              <h4>Três grupos da 7ª edição da TechSchool como semifinalistas na maior competição global de meninas na TI</h4>
+              <p class="cta-link">Clique para ver no Instagram</p>
             </div>
-          </div>
-          <div class="swiper-pagination"></div>
+          </a>
         </div>
       </div>
-    </section>
 
-    <section id="results" class="results section">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Resultados</h2>
-        <p>Nossos Principais Resultados e Conquistas</p>
-      </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
-            <p><strong></strong></p>
-            <p>Aqui você pode adicionar o conteúdo sobre os resultados do projeto GRACE, como gráficos, números, prêmios, etc.</p>
-          </div>
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="publication-item">
+          <a href="https://www.instagram.com/p/DKvdY7AR_0e/?img_index=1" target="_blank">
+            <img src="assets/img/instagram/post1.png" class="img-fluid" alt="Semifinalistas">
+            <div class="publication-info">
+              <h4>Aplicativo desenvolvido no TechSchool 2025 (INTERPRET), recebe menção honrosa</h4>
+              <p class="cta-link">Clique para ver no Instagram</p>
+            </div>
+          </a>
         </div>
       </div>
-    </section>
 
-    <section id="publications" class="publications section light-background">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Publicações</h2>
-        <p>Artigos e Trabalhos Publicados</p>
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="publication-item">
+          <a href="https://www.instagram.com/p/C7zIqT0qWEf" target="_blank">
+            <img src="assets/img/instagram/post6.png" class="img-fluid" alt="Semifinal">
+            <div class="publication-info">
+              <h4>Temos 4 equipes diretamente da TechSchool na semifinal da competição internacional Technovation Girls.</h4>
+              <p class="cta-link">Clique para ver no Instagram</p>
+            </div>
+          </a>
+        </div>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12" data-aos="fade-up" data-aos-delay="100">
-            <p><strong></strong></p>
-            <p>Listar as publicações, artigos científicos, trabalhos em congressos, etc.</p>
-          </div>
+
+    </div>
+  </div>
+</section>
+
+  <section id="publications" class="publications section light-background">
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Publicações</h2>
+    <p>Acompanhe Nossas Novidades no Instagram</p>
+  </div>
+  <div class="container">
+    <div class="row gy-4">
+
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="publication-item">
+          <a href="https://www.instagram.com/p/DMdlSyVTfrX" target="_blank">
+            <img src="assets/img/instagram/post1.png" class="img-fluid" alt="Escola Em Programação Web Para Meninas e Mulheres">
+            <div class="publication-info">
+              <center><h4>Escola Em Programação Web Para Meninas e Mulheres</h4></center>
+              <center><p>Clique para ver no Instagram</p></center>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="publication-item">
+          <a href="https://www.instagram.com/p/DL6VD6SsrYI" target="_blank">
+            <img src="assets/img/instagram/post2.png" class="img-fluid" alt="Menção Honrosa">
+            <div class="publication-info">
+              <center><h4>Aplicativo desenvolvido no TechSchool 2025 (INTERPRET), recebe menção honrosa</h4></center>
+              <center><p>Clique para ver no Instagram</p></center>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="publication-item">
+          <a href="https://www.instagram.com/p/C7_22jWg7-x/" target="_blank">
+            <img src="assets/img/instagram/post3.png" class="img-fluid" alt="Projeto Rebeca">
+            <div class="publication-info">
+              <center><h4>Conheça o Projeto REBECA</h4></center>
+              <center><p>Clique para ver no Instagram</p></center>
+            </div>
+          </a>
         </div>
       </div>
     </section>
@@ -258,27 +365,54 @@
       </div>
     </section>
 
-    <section id="services" class="services section light-background">
-      <div class="container section-title" data-aos="fade-up">
-        <h2>PARCERIAS</h2>
-        <p>CONSTRUINDO PONTES PARA INOVAÇÃO</p>
-      </div>
-      <div class="container">
-        <div class="row gy-4">
-          <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <div class="service-item  position-relative">
-              <div class="icon">
-                <i class="bi bi-cash-stack" style="color: #0dcaf0;"></i>
-              </div>
-              <a href="service-details.html" class="stretched-link">
-                <h3>Parceria 0</h3>
-              </a>
-              <p>texto</p>
-            </div>
+   <section id="services" class="services section light-background">
+  <div class="container section-title" data-aos="fade-up">
+    <h2>PARCERIAS</h2>
+    <p>CONSTRUINDO PONTES PARA INOVAÇÃO</p>
+  </div>
+  
+  <div class="container">
+    <div class="row gy-4">
+
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
+        <div class="service-item position-relative">
+          <div class="icon">
+            <img src="assets/img/parcerias/meninasDigitais.png" alt="Logo Meninas Digitais">
           </div>
+          <a href="https://meninas.sbc.org.br" target="_blank" class="stretched-link">
+            <h3>Meninas Digitais</h3>
+          </a>
+          <p>Programa da Sociedade Brasileira de Computação.</p>
         </div>
       </div>
-    </section>
+
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
+        <div class="service-item position-relative">
+          <div class="icon">
+            <img src="assets/img/parcerias/logoICMC.png" alt="Logo ICMC">
+          </div>
+          <a href="https://icmc.usp.br/institucional/quem-somos" target="_blank" class="stretched-link">
+            <h3>ICMC-USP</h3>
+          </a>
+          <p>Instituto de Ciências Matemáticas e de Computação da Universidade de São Paulo.</p>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="300">
+        <div class="service-item position-relative">
+          <div class="icon">
+            <img src="assets/img/parcerias/logoCNPQ.png" alt="Logo CNPQ">
+          </div>
+          <a href="http://portal-adm.cnpq.br/web/guest/pagina-inicial" target="_blank" class="stretched-link">
+            <h3>CNPQ</h3>
+          </a>
+          <p>Conselho Nacional de Desenvolvimento Científico e Tecnológico.</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
     
     <section id="team" class="team section">
     </section>
