Ajuste nos colaboradores

--- a/index.html
+++ b/index.html
@@ -187,9 +187,15 @@
       </div>
     </section>
 
-    <section id="testimonials" class="testimonials section">
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <div class="swiper init-swiper">
+
+
+   <section id="testimonials" class="testimonials section">
+  <div class="container section-title" data-aos="fade-up">
+    <p>COLABORADORES</p>
+    <h2>GRACE</h2>
+  </div>
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <div class="swiper init-swiper">
           <script type="application/json" class="swiper-config">
             {
               "loop": true,
@@ -219,12 +225,12 @@
 
   <div class="swiper-slide">
     <div class="testimonial-item">
-      <img src="assets/img/testimonials/NOME_DA_IMAGEM_1.jpg" class="testimonial-img" alt="">
-      <h3>Colaboradora</h3>
-      <h4>Lina &amp; Coordenadora</h4>
+      <img src="assets/img/colaboradores/myriamListon.png" class="testimonial-img" alt="">
+      <h3>Myriam Liston Ferreira Perdiza</h3>
+      <h4>IFSP-São Carlos</h4>
       <p>
         <i class="bi bi-quote quote-icon-left"></i>
-        <span>texto</span>
+        <span>Formada em Gestão de TI, estudante de especialização Lato Sensu em Educação: Ciência, Tecnologia e Sociedade.</span>
         <i class="bi bi-quote quote-icon-right"></i>
       </p>
     </div>
@@ -232,12 +238,12 @@
 
   <div class="swiper-slide">
     <div class="testimonial-item">
-      <img src="assets/img/testimonials/NOME_DA_IMAGEM_2.jpg" class="testimonial-img" alt="">
-      <h3>Colaboradora</h3>
-      <h4>Isadora Ferrão</h4>
+      <img src="assets/img/colaboradores/brenaMarques.png" class="testimonial-img" alt="">
+      <h3>Brena Marques Ribeiro</h3>
+      <h4>Liderança de Ensino  &amp; Marketing</h4>
       <p>
         <i class="bi bi-quote quote-icon-left"></i>
-        <span>texto</span>
+        <span>Engenheira Eletricísta e mestranda em Engenharia de Software.</span>
         <i class="bi bi-quote quote-icon-right"></i>
       </p>
     </div>
@@ -245,12 +251,12 @@
 
   <div class="swiper-slide">
     <div class="testimonial-item">
-      <img src="assets/img/testimonials/NOME_DA_IMAGEM_3.jpg" class="testimonial-img" alt="">
-      <h3>Colaboradora</h3>
-      <h4>Milena</h4>
+      <img src="assets/img/colaboradores/danielePaulino.png" class="testimonial-img" alt="">
+      <h3>Daniele Paulino</h3>
+      <h4>Embaixadora da Technovation Girls</h4>
       <p>
         <i class="bi bi-quote quote-icon-left"></i>
-        <span>texto</span>
+        <span>Engenheira Estrutural pela TYLin e Doutora em Engenharia Arquitetônica pela Penn State University.</span>
         <i class="bi bi-quote quote-icon-right"></i>
       </p>
     </div>
@@ -258,12 +264,116 @@
 
   <div class="swiper-slide">
     <div class="testimonial-item">
-      <img src="assets/img/testimonials/NOME_DA_IMAGEM_4.jpg" class="testimonial-img" alt="">
-      <h3>Colaboradora</h3>
-      <h4>Gabriela Marculino</h4>
+      <img src="assets/img/colaboradores/daviAndrade.png" class="testimonial-img" alt="">
+      <h3>Davi Andrade Laet</h3>
+      <h4>Monitor do GRACE</h4>
       <p>
         <i class="bi bi-quote quote-icon-left"></i>
-        <span>texto</span>
+        <span>Graduando de Engenharia Elétrica - ICMC-USP, faço parte da linha de frente de ensino GRACE incentivando as alunas à seguirem nas ciências exatas.</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+  <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/colaboradores/linaGarces.png" class="testimonial-img" alt="">
+      <h3>Lina Garcés</h3>
+      <h4>Coordenadora do GRACE</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>Professora do ICMC-USP.</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+  <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/colaboradores/isadoraFerrao.png" class="testimonial-img" alt="">
+      <h3>Isadora Ferrão</h3>
+      <h4>Embaixadora do Technovation Girls</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>Pós-doutoranda Occidentale.</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+  <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/colaboradores/joaoAntonio.png" class="testimonial-img" alt="">
+      <h3>João Antônio Misson Milhorim</h3>
+      <h4>Monitor GRACE</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>Mestrando em Ciências da Computação no ICMC-USP.</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+  <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/colaboradores/gabrielaMarculino.jpg" class="testimonial-img" alt="">
+      <h3>Gabriela Marculino</h3>
+      <h4>Desenvolvedora Web do GRACE</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>Graduanda em Ciência da Computação pela UEMS, ex-monitora (TS 2024) e atualmente Desenvolvedora Web do GRACE.</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+   <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/colaboradores/leoSampaio.png" class="testimonial-img" alt="">
+      <h3>Leo Sampaio Ferraz Ribeiro</h3>
+      <h4>Vice-Coordenadora GRACE</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>Professora no ICMC-USP.</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+   <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/colaboradores/marineGolfetto.png" class="testimonial-img" alt="">
+      <h3>Marine Golfetto</h3>
+      <h4>Líder do Marketing</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>Especialista em Computação Aplicada à Educação-USP.</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+   <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/colaboradores/rebecaMaia.png" class="testimonial-img" alt="">
+      <h3>Rebeca Maia Pontes</h3>
+      <h4>Co-líder Eventos GRACE</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>Mestranda em Ciência da Computação no ICMC-USP.</span>
+        <i class="bi bi-quote quote-icon-right"></i>
+      </p>
+    </div>
+  </div>
+
+   <div class="swiper-slide">
+    <div class="testimonial-item">
+      <img src="assets/img/colaboradores/thaisRibeiro.png" class="testimonial-img" alt="">
+      <h3>Thaís Ribeiro Lauriano</h3>
+      <h4>Membro GRACE</h4>
+      <p>
+        <i class="bi bi-quote quote-icon-left"></i>
+        <span>Graduanda em Ciências de Comunicação no ICMC-USP.</span>
         <i class="bi bi-quote quote-icon-right"></i>
       </p>
     </div>
